--- a/techio.yml
+++ b/techio.yml
@@ -1,7 +1,7 @@
 title: Programação C
 plan:
 - title: Apresentação
-  statement: Apresenta.md
+  statement: /markdowns/apresenta.md
 plan:  
 - title: Ainda na Introdução
-  statement: statement.md
+  statement: lesson21.md
