--- a/techio.yml
+++ b/techio.yml
@@ -5,3 +5,9 @@ plan:
 plan:  
 - title: Ainda na Introdução
   statement: lesson21.md
+projects:
+  cpp:
+    root: /cpp-project
+    runner:
+      name: techio/cmake-gcc-runner
+      version: latest
