--- a/techio.yml
+++ b/techio.yml
@@ -8,8 +8,10 @@ plan:
   plan: 
   - title: Apresentação
     statement: /markdowns/apresenta.md
-  - title: Ainda na Introdução
+  - title: Ainda na Introdução (If encadeado)
     statement: /markdowns/lesson21.md
+  - title: Ainda na Introdução (Switch)
+    statement: /markdowns/lesson22.md  
 projects:
   cpp:
     root: /cpp-project
