--- a/techio.yml
+++ b/techio.yml
@@ -17,7 +17,9 @@ plan:
   - title: Estrutura de Dados Homogênea (Vetor)
     statement: /markdowns/lesson201.md  
   - title: Estrutura de Dados Homogênea (Matriz)
-    statement: /markdowns/lesson202.md    
+    statement: /markdowns/lesson202.md  
+  - title: Estrutura de Dados Homogênea (Matriz)
+    statement: /markdowns/lesson203.md     
   - title: Funções em C
     statement: /markdowns/lesson23.md   
   - title: Funções em C
