--- a/techio.yml
+++ b/techio.yml
@@ -24,6 +24,8 @@ plan:
     statement: /markdowns/lesson23.md   
   - title: Funções em C
     statement: /markdowns/lesson24.md      
+  - title: Cadeia de Caracteres
+    statement: /markdowns/lesson25.md       
 projects:
   cpp:
     root: /cpp-project
