--- a/techio.yml
+++ b/techio.yml
@@ -21,7 +21,10 @@ plan:
   - title: Estrutura de Dados Homogênea (Matriz)
     statement: /markdowns/lesson203.md   
   - title: Vamos Praticar(Vetor/Matriz)?
-    statement: /markdowns/lesson204.md       
+    statement: /markdowns/lesson204.md  
+- title: Programação C
+  description: Continuação com conceitos mais avançados.
+  plan:     
   - title: Funções em C
     statement: /markdowns/lesson23.md   
   - title: Funções em C
