--- a/techio.yml
+++ b/techio.yml
@@ -45,7 +45,7 @@ plan:
     statement: /markdowns/lesson31.md  
   - title: Operações com Ponteiros
     statement: /markdowns/lesson32.md     
-  - title: Ponteiros e Vetorres
+  - title: Ponteiros e Vetores
     statement: /markdowns/lesson33.md  
 projects:
   cpp:
