--- a/techio.yml
+++ b/techio.yml
@@ -52,7 +52,9 @@ plan:
   - title: Praticando Ponteiros e Funções
     statement: /markdowns/lesson35.md  
   - title: Funções Recursivas
-    statement: /markdowns/lesson36.md    
+    statement: /markdowns/lesson36.md   
+  - title: Arquivos em C
+    statement: /markdowns/lesson37.md      
 projects:
   cpp:
     root: /cpp-project
