--- a/techio.yml
+++ b/techio.yml
@@ -23,7 +23,7 @@ plan:
   - title: Vamos Praticar(Vetor/Matriz)?
     statement: /markdowns/lesson204.md  
 - title: Programação C
-  description: Continuação com conceitos mais avançados.
+  description: Conceitos Avançados.
   plan:     
   - title: Funções em C
     statement: /markdowns/lesson23.md   
@@ -54,7 +54,9 @@ plan:
   - title: Funções Recursivas
     statement: /markdowns/lesson36.md   
   - title: Arquivos em C
-    statement: /markdowns/lesson37.md      
+    statement: /markdowns/lesson37.md   
+  - title: Manipulando Arquivos em C
+    statement: /markdowns/lesson38.md        
 projects:
   cpp:
     root: /cpp-project
