--- a/techio.yml
+++ b/techio.yml
@@ -57,8 +57,10 @@ plan:
     statement: /markdowns/lesson37.md   
   - title: Manipulando Arquivos em C
     statement: /markdowns/lesson38.md  
-  - title: Manipulando Arquivos em C (Leitura/Gravação)
+  - title: Manipulando Arquivos em C (caracter)
     statement: /markdowns/lesson39.md    
+  - title: Manipulando Arquivos em C (cadeias)
+    statement: /markdowns/lesson40.md      
 projects:
   cpp:
     root: /cpp-project
