--- a/techio.yml
+++ b/techio.yml
@@ -60,7 +60,9 @@ plan:
   - title: Manipulando Arquivos em C (caracter)
     statement: /markdowns/lesson39.md    
   - title: Manipulando Arquivos em C (cadeias)
-    statement: /markdowns/lesson40.md      
+    statement: /markdowns/lesson40.md    
+  - title: Manipulando Arquivos em C (Blocos)
+    statement: /markdowns/lesson41.md       
 projects:
   cpp:
     root: /cpp-project
