--- a/techio.yml
+++ b/techio.yml
@@ -1,70 +1,68 @@
 title: Programação C
 cover: /cover.png
 plan:
-- title: Programação C - Prof. MARCO VAZ
-plan:
 - title: Introdução
   description: Esta é a descrição do primeiro capítulo.
-  plan: 
+  plan:
   - title: Apresentação
     statement: /markdowns/apresenta.md
   - title: Ainda na Introdução (If encadeado)
     statement: /markdowns/lesson21.md
   - title: Ainda na Introdução (Switch)
-    statement: /markdowns/lesson22.md  
-  - title: Estrutura de Dados Homogêneas 
-    statement: /markdowns/lesson20.md  
+    statement: /markdowns/lesson22.md
+  - title: Estrutura de Dados Homogêneas
+    statement: /markdowns/lesson20.md
   - title: Estrutura de Dados Homogênea (Vetor)
-    statement: /markdowns/lesson201.md  
+    statement: /markdowns/lesson201.md
   - title: Estrutura de Dados Homogênea (Matriz)
-    statement: /markdowns/lesson202.md  
+    statement: /markdowns/lesson202.md
   - title: Estrutura de Dados Homogênea (Matriz)
-    statement: /markdowns/lesson203.md   
+    statement: /markdowns/lesson203.md
   - title: Vamos Praticar(Vetor/Matriz)?
-    statement: /markdowns/lesson204.md  
+    statement: /markdowns/lesson204.md
 - title: Programação C
   description: Conceitos Avançados.
-  plan:     
+  plan:
   - title: Funções em C
-    statement: /markdowns/lesson23.md   
+    statement: /markdowns/lesson23.md
   - title: Funções em C
-    statement: /markdowns/lesson24.md      
+    statement: /markdowns/lesson24.md
   - title: Cadeia de Caracteres
-    statement: /markdowns/lesson25.md  
+    statement: /markdowns/lesson25.md
   - title: Cadeia de Caracteres
-    statement: /markdowns/lesson26.md  
+    statement: /markdowns/lesson26.md
   - title: Estrutura de Dados Heterogênea (Struct)
-    statement: /markdowns/lesson27.md  
+    statement: /markdowns/lesson27.md
   - title: Estrutura de Dados Heterogênea (Union e Enum)
-    statement: /markdowns/lesson28.md  
+    statement: /markdowns/lesson28.md
   - title: Exercícios
-    statement: /markdowns/lesson29.md  
+    statement: /markdowns/lesson29.md
   - title: Ponteiros
-    statement: /markdowns/lesson30.md 
+    statement: /markdowns/lesson30.md
   - title: Ponteiros (cont.)
-    statement: /markdowns/lesson31.md  
+    statement: /markdowns/lesson31.md
   - title: Operações com Ponteiros
-    statement: /markdowns/lesson32.md     
+    statement: /markdowns/lesson32.md
   - title: Ponteiros e Vetores
-    statement: /markdowns/lesson33.md 
+    statement: /markdowns/lesson33.md
   - title: Passagem de parâmetro por referência
-    statement: /markdowns/lesson34.md   
+    statement: /markdowns/lesson34.md
   - title: Praticando Ponteiros e Funções
-    statement: /markdowns/lesson35.md  
+    statement: /markdowns/lesson35.md
   - title: Funções Recursivas
-    statement: /markdowns/lesson36.md   
-  - title: Arquivos em C
-    statement: /markdowns/lesson37.md   
+    statement: /markdowns/lesson36.md
+  - title: Ficheiros em C
+    statement: /markdowns/lesson37.md
   - title: Manipulando Arquivos em C
-    statement: /markdowns/lesson38.md  
+    statement: /markdowns/lesson38.md
   - title: Manipulando Arquivos em C (caracter)
-    statement: /markdowns/lesson39.md    
+    statement: /markdowns/lesson39.md
   - title: Manipulando Arquivos em C (cadeias)
-    statement: /markdowns/lesson40.md    
+    statement: /markdowns/lesson40.md
   - title: Manipulando Arquivos em C (Blocos)
-    statement: /markdowns/lesson41.md 
+    statement: /markdowns/lesson41.md
   - title: Exercícios Arquivos
-    statement: /markdowns/lesson42.md   
+    statement: /markdowns/lesson42.md
 projects:
   cpp:
     root: /cpp-project
