--- a/techio.yml
+++ b/techio.yml
@@ -55,7 +55,7 @@ plan:
     statement: /markdowns/lesson37.md
   - title: Operações com ficheiros em C
     statement: /markdowns/lesson38.md
-  - title: Manipulando Arquivos em C (caracter)
+  - title: Operações com ficheiros em C (caracter)
     statement: /markdowns/lesson39.md
   - title: Manipulando Arquivos em C (cadeias)
     statement: /markdowns/lesson40.md
