--- a/techio.yml
+++ b/techio.yml
@@ -57,7 +57,7 @@ plan:
     statement: /markdowns/lesson38.md
   - title: Operações com ficheiros em C (caracter)
     statement: /markdowns/lesson39.md
-  - title: Manipulando Arquivos em C (cadeias)
+  - title: Operações com ficheiros em C (cadeias)
     statement: /markdowns/lesson40.md
   - title: Manipulando Arquivos em C (Blocos)
     statement: /markdowns/lesson41.md
