--- a/techio.yml
+++ b/techio.yml
@@ -59,7 +59,7 @@ plan:
     statement: /markdowns/lesson39.md
   - title: Operações com ficheiros em C (cadeias)
     statement: /markdowns/lesson40.md
-  - title: Manipulando Arquivos em C (Blocos)
+  - title: Operações com ficheiros em C (Blocos)
     statement: /markdowns/lesson41.md
   - title: Exercícios Arquivos
     statement: /markdowns/lesson42.md
